remote-authentication: add Remote Authentication API
